5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4480/executions/1831_1640.log
== TEST (2019-06-13 16:03:11) 
-- CODE:
from numpy imnport *
vetor = array(eval(input("qual o vetor?"))

-- ERROR:
File "XXXX", line 1
    from numpy imnport *
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:03:18) 
-- CODE:
from numpy import *
vetor = array(eval(input("qual o vetor?"))

-- ERROR:
File "XXXX", line 3
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:03:27) 
-- CODE:
from numpy import *
vetor = array(eval(input("qual o vetor?"))
-- ERROR:
File "XXXX", line 3
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:04:20) 
-- CODE:
from numpy import *
vetor = array(eval(input("qual o vetor?"))
				  v = 0
				  if v >= 0
-- ERROR:
File "XXXX", line 3
    v = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:10:33) 
-- CODE:
from numpy import *
vetor = array(eval(input("qual o vetor?"))
v = 0
-- ERROR:
File "XXXX", line 3
    v = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:10:39) 
-- CODE:
from numpy import *
vetor = array(eval(input("qual o vetor?"))
-- ERROR:
File "XXXX", line 3
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:06) 
-- CODE:
from numpy import *
v = array(eval(input("qual o vetor?"))
-- ERROR:
File "XXXX", line 3
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:17) 
-- CODE:
from numpy import*
v = array(eval(input("qual o vetor?"))
-- ERROR:
File "XXXX", line 3
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:11:19) 
-- CODE:
from numpy import*
v = array(eval(input("qual o vetor?"))
-- ERROR:
File "XXXX", line 3
    
                           ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:15:47) 
-- CODE:
from numpy import*
vetor = array(eval(input("qual o vetor?"))
				  v = 0
				  for vetor <= 0:
				  print()
-- ERROR:
File "XXXX", line 3
    v = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:19) 
-- CODE:
from numpy import*
vetor = array(eval(input("qual o vetor?"))
				  zeros(N, dtype = int)
-- ERROR:
File "XXXX", line 3
    zeros(N, dtype = int)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:39) 
-- CODE:
from numpy import*
vetor = array(eval(input("qual o vetor?"))
				  v= zeros(N, dtype=int)
-- ERROR:
File "XXXX", line 3
    v= zeros(N, dtype=int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:58) 
-- CODE:
from numpy import*
vetor = array(eval(input("qual o vetor?"))
-- ERROR:
File "XXXX", line 3
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:18:34) 
-- CODE:
from numpy import*
vetor = array(eval(input("qual o vetor?"))
v = 0
for (impar) >=0:
	print(i)
-- ERROR:
File "XXXX", line 3
    v = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:19:09) 
-- CODE:
from numpy import*
vetor = array(eval(input("qual o vetor?"))
v = 0
for (impar) >=0:
	print(i)
-- ERROR:
File "XXXX", line 3
    v = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:21:25) 
-- CODE:
from numpy import*
vetor = array(eval(input("qual o vetor?"))
-- ERROR:
File "XXXX", line 3
    
                               ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:10) 
-- CODE:
from numpy import*
z = zeros(46, dtype = int)
vet = array(eval(input("")
for i in range (size(vet)):
					  x = vet[i] - 1950
					  z[x]+1
					  print(z)
-- ERROR:
File "XXXX", line 4
    for i in range (size(vet)):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:20) 
-- CODE:
from numpy import*
z = zeros(46, dtype = int)
vet = array(eval(input("")
for i in range (size(vet))
					  x = vet[i] - 1950
					  z[x]+1
					  print(z)
-- ERROR:
File "XXXX", line 5
    x = vet[i] - 1950
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:24:44) 
-- CODE:
from numpy import*
z = zeros(46, dtype = int)
vt = array(eval(input("")
for i in range (size(vet)):
					  x = vet[i] - 1950
					  z[x]+1
					  print(z)
-- ERROR:
File "XXXX", line 4
    for i in range (size(vet)):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:25:57) 
-- CODE:
from numpy import*
z = zeros(0, dtype = int)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:42) 
-- CODE:
from numpy import*
z = zeros(0, dtype = int)
x <= 0
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:51) 
-- CODE:
from numpy import*
x = zeros(0, dtype = int)
x <= 0
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:04) 
-- CODE:
from numpy import*
x = zeros(0, dtype = int)
x <= 0
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:40) 
-- CODE:
from numpy import*
z = array(eval(input("")
x = zeros(0, dtype = int)
x <= 0
print(x)
-- ERROR:
File "XXXX", line 3
    x = zeros(0, dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:27:55) 
-- CODE:
from numpy import*
z = array(eval(input("")
x = zeros(0, dtype = int)
e<= 0
print(x)
-- ERROR:
File "XXXX", line 3
    x = zeros(0, dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:28:02) 
-- CODE:
from numpy import*
z = array(eval(input("")
z= zeros(0, dtype = int)
e<= 0
print(x)
-- ERROR:
File "XXXX", line 3
    z= zeros(0, dtype = int)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
